Adding pure typescript validation to signup_form.html

--- a/package.json
+++ b/package.json
@@ -1,4 +1,9 @@
 {
+  "scripts": {
+  "build": "tsc",               
+  "dev": "tsc --watch"          
+  },
+  "type": "module",
   "devDependencies": {
     "typescript": "^5.9.3"
   }
